# funds

./: .gitignore  README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
funds/: __init__.py  util.py
funds/scrap/: company_info_prep.py  company_info_w_historical_metrics.py  dirty_dumping.py
misc/: Funds in construction.ipynb
