[metadata]
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
version = 0.0.1
description = Historical finance data data and caching
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = funds
display_name = funds

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	importlib_resources

