[metadata]
name = funds
version = 0.0.2
url = https://github.com/thorwhalen/funds
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Historical finance data data and caching
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = funds

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	importlib_resources

